@@ -28,6 +28,18 @@ Bug Fixes
 - The ``pyramid_alchemy`` paster template had a typo, preventing an import
   from working.
 
+- Fix apparent failures when calling ``pyramid.traversal.find_model(root,
+  path)`` or ``pyramid.traversal.traverse(path)`` when ``path`` is
+  (erroneously) a Unicode object. The user is meant to pass these APIs a
+  string object, never a Unicode object.  In practice, however, users indeed
+  pass Unicode.  Because the string that is passed must be ASCII encodeable,
+  now, if they pass a Unicode object, its data is eagerly converted to an
+  ASCII string rather than being passed along to downstream code as a
+  convenience to the user and to prevent puzzling second-order failures from
+  cropping up (all failures will occur within ``pyramid.traversal.traverse``
+  rather than later down the line as the result of calling
+  ``traversal_path``).
+
 Backwards Incompatibilities
 ---------------------------
 
